ECA-2628: Novosec classes are removed and replaced by bouncycastle classes. CMP messages created using novosec classes are parsed correctly. Many deprecated classes are replaced by the new recommended classes. X500Principal objects are removed except in comparision tests.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@15770 37aeb1de-b14b-0410-9a0e-82b28170d228